# majestic-monolith-django

./: .dockerignore  .gitignore  .pre-commit-config.yaml  GUIDE.md  README.md  conventions.md  cookiecutter.json  dbdiagramio.text  setup.md
cdk/mmd-app/: app.py  requirements.txt  setup.py
compose/: docker-compose-local.yml  docker-compose-test.yml  readme.md
config/app/: README.md  django.sh  django_local.sh  pyproject.toml  pytest.sh
config/codedeploy/: beta_appspec.json  prod_appspec.json  stage_appspec.json
config/docker/: Dockerfile  Dockerfile_dev  Dockerfile_local  Dockerfile_nginx  Dockerfile_test  Dockerfile_xray
config/ecs/: task-definition-no-xray.json  task-definition.json
config/nginx/: app.conf  app_local.conf
docs/: conventions.md  infra_setup.md  setup.md
majestic-monolith-django/: .coveragerc  manage.py  pytest.ini  setup.cfg
majestic-monolith-django/auth/: adapter.py  admin.py  apps.py  auth_schema.py  caches.py  docs.py  drf_schema.py  events.py  models.py  serializers.py  urls.py  utils_auth.py  views.py
majestic-monolith-django/core/: admin_filters.py  admin_forms.py  auth_backends.py  authentication.py  const.py  context_processor.py  docs.py  events.py  exception_handler.py  exceptions.py  fields.py  invoke_lambda.py  log.py  log_filter.py  log_formatter.py  log_schema.py  meta.py  middleware.py  mixin.py  pagination.py  password_validation.py  permissions.py  redis_client.py  renderer.py  router.py  selector.py  serializers.py  services.py  slack_backends.py  slack_notification.py  storages.py  throttling.py  utils.py  utils_time.py  validatior.py  views.py  views_test.py
majestic-monolith-django/distribution/: admin.py  admin_staff.py  apps.py  caches.py  models.py  serializers.py  urls.py  views.py
majestic-monolith-django/majestic-monolith-django/: asgi.py  urls.py  urls_doc.py  wsgi.py
{{cookiecutter.project_slug}}/: manage.py  pytest.ini  setup.cfg
(+179 files in other folders)
