[tool.poetry]
name = "{{cookiecutter.project_slug}} server"
version = "0.1.0"
description = "{{cookiecutter.project_slug}} package init"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "3.8.10"
Django = "3.2.4"
djangorestframework = "^3.12.4"
boto3 = "^1.17.43"
django-cors-headers = "^3.7.0"
django-log-formatter-ecs = "^0.0.5"
django-mysql = "^3.11.1"
django-phonenumber-field = "^5.0.0"
django-redis = "^4.12.1"
django-request-logging = "^0.7.2"
django-storages = "^1.11.1"
django-user-agents = "^0.4.0"
djangorestframework-simplejwt = "^4.6.0"
hiredis = "^2.0.0"
mysqlclient = "^2.0.3"
redis = "^3.5.3"
redis-py-cluster = "^2.1.0"
requests = "^2.25.1"
aws-xray-sdk = "^2.7.0"
gunicorn = "^20.1.0"
uvicorn = "^0.13.4"
uvloop = "^0.15.2"
httptools = "^0.1.1"
django-grappelli = "^2.14.3"
python-jose = "^3.2.0"
django-rest-auth = "^0.9.5"
django-allauth = "^0.44.0"
django-activity-stream = "^0.10.0"
phonenumbers = "^8.12.20"
drf-yasg = "^1.20.0"
django-guid = "^3.2.0"
djangorestframework-api-key = "^2.0.0"
easy-thumbnails = "^2.7.1"
geopy = "^2.2.0"
django-daterangefilter = "^1.0.0"
pre-commit = "^2.15.0"
django-import-export = "^2.6.0"
django-filter = "^21.1"
djangorestframework-word-filter = "^0.2.0"
django-slack = "^5.17.6"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.1"
pytest-cov = "^2.11.1"
coverage = "^5.5"
django-debug-toolbar = "^3.2"
responses = "^0.13.2"
drf-extensions = "^0.7.0"
pytest = "^6.2.2"
pytest-env = "^0.6.2"
pytest-forked = "^1.3.0"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.5.1"
schema = "^0.7.4"
tox-poetry = "^0.3.0"
pytest-xdist = "^2.2.1"
python-dotenv = "^0.16.0"
pytest-django = "^4.1.0"
Werkzeug = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
